--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -14,17 +14,14 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
-   
-    <script src="../src/js-proposal/demo.js"></script>
-		<script src="../src/js-proposal/imagesloaded.pkgd.min.js"></script>
-		<script src="../src/js-proposal/anime.min.js"></script>
-		<script src="../src/js-proposal/menu2.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDia67gW5Ei_T8vyX0ct4pyrezLMjZ_YgA"></script>
    
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+   
     <div id="root"></div>
-
+   
   </body>
 </html>
