--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -16,12 +16,16 @@
     <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDia67gW5Ei_T8vyX0ct4pyrezLMjZ_YgA"></script>
    
-    <title>React App</title>
+
+
+    <link rel="stylesheet" type="text/css" href="../dist/fullpage.css" />
+    <link rel="stylesheet" type="text/css" href="examples.css" />
+    <title> || TecArch ||</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
    
     <div id="root"></div>
-   
+
   </body>
 </html>
