--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -14,7 +14,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
-    <!-- <script src=`https://maps.googleapis.com/maps/api/js?key=${process.env.REACT_APP_GOOGLE_API}`></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDia67gW5Ei_T8vyX0ct4pyrezLMjZ_YgA"></script>
    
 
 
